2004-02-03  Alex Roitman  <shura@alex.neuro.umn.edu>
	* configure.in, configure: Don't ship Hungarian manual (unfinished).
	* doc/gramps-manual/Makefile.am, doc/gramps-manual/Makefile.in:
	Don't ship Hungarian manual.

2004-02-02  Don Allingham  <dallingham@users.sourceforge.net>
	* src/VersionControl.py: Call win.run to prevent exit from killing the
	window before the data is saved.

2004-02-02  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/ru/custom.xml: Update.
	* configure.in, configure: Don't ship German manual (unfinished).
	* doc/gramps-manual/Makefile.am, doc/gramps-manual/Makefile.in:
	Don't ship German manual.
	* doc/gramps-manual/C/filtref.xml: Typo.
	* doc/gramps-manual/ru/filtref.xml: Update.

2004-02-02  Egyeki Gergely  <egeri@elte.hu>
	* src/plugins/rel_hu.py: New relations added.
	* src/po/hu.po: Minor corrections.

2004-02-01  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/rel_hu.py: Typos.
	* src/po/ru.po: Typo.
	* doc/gramps-manual/C/usage.xml: Typo.
	* doc/gramps-manual/ru/usage.xml: Update.
	* doc/gramps-manual/ru/custom.xml: Update.

2004-01-31  Egyeki Gergely  <egeri@elte.hu>
	* src/plugins/rel_hu.py: Update

2004-01-31  Michel Guitel  <michel.guitel@free.fr>
	* doc/gramps-manual/fr/faq.xml: Update.
	* doc/gramps-manual/fr/gramps-manual.xml: Update.
	* doc/gramps-manual/fr/usage.xml: Update.
	* doc/gramps-manual/fr/figures/*.png: Update figures.

2004-01-31  Don Allingham  <dallingham@users.sourceforge.net>
	* src/SourceView.py: handle column sorting properly
	* src/PlaceView.py: handle column sorting properly
	* src/gramps_main.py: better error messages on database write failure
	* src/WriteXML.py: better error messages on database write failure
	* src/GrampsXML.py: better error messages on database write failure

2004-01-31  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/Ancestors.py: Typo.
	* src/plugins/IndivComplete.py: Typo.
	* src/Report.py: Mark translatable string.