@@ -29,7 +29,7 @@
 	<textobject> 
 	<phrase>Montre la fenêtre principale de &app; . Comprend le titre, les barres de menu, 
 	      d'outils, sidebar, la zone d'affichage, d'état, de progression
-	      et de défilement. La barre de menu comprend les menus Fichier, Edition, Affichage, Signets, 
+	      et de défilement. La barre de menu comprend les menus Fichier, Edition, Affichage, Aller à, Signets, 
 	      Editions, Outils, Paramètres et Aide. </phrase>
 	</textobject></mediaobject></screenshot></figure>
 	<!-- ==== End of Figure ==== -->
